# mindspring-processing_backend

./: .env.example  .gitignore  CHAT_LEARNING_TOOLS.md  COMPLETE_USER_FLOW.md  CURL_COMMANDS.md  Dockerfile  FEATURES.md  Makefile  NOTEBOOK_SOURCE_FLOW.md  PHASE1_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  TEST_CURL_COMMANDS.md  USER_TESTING_GUIDE.md  alembic.ini  build.ps1  build.sh  create_notebook.py  docker-compose.test.yml  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema_with_proper_uuids.py  002_add_vector_column_to_chunks.py  003_update_vector_dimension.py  004_add_deleted_at_to_generation_history.py  005_add_deleted_at_to_remaining_tables.py  006_add_full_name_to_users.py
app/: main.py
app/api/: deps.py  exception_handlers.py
app/api/middleware/: rate_limit.py  timeout.py
app/api/v1/: api_router.py
app/core/: config.py  oauth.py  security.py  utils.py
app/domain/: interfaces.py
app/domain/errors/: __init__.py  exceptions.py
app/domain/models/: chunk.py  conversation.py  document.py  generation_history.py  job.py  message.py  notebook.py  otp.py  quiz.py  refresh_token.py  source.py  study_guide.py  user.py
app/domain/repositories/: __init__.py  conversation_repository.py  document_repository.py  history_repository.py  notebook_repository.py  quiz_repository.py  (+2 more)
app/infrastructure/: container.py  llm_client.py  real_llm_client.py
docs/: CURL_COMMANDS.md  DOCUMENT_PROCESSING_LOGGING_ENHANCEMENT.md  FRONTEND_API_GUIDE.md  NOTEBOOK_SOURCE_FLOW.md  TESTING_STRATEGY.md
scripts/: add_otps_deleted_at.py  clear_database.py  debug_signup.py
tests/: _fixtures.py
(+39 files in other folders)
