[tool.poetry]
name = "mindsping-fastapi-backend"
version = "0.1.0"
description = "Enterprise-grade FastAPI backend for MindSpring"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pgvector = "^0.3.3"
pydantic = {extras = ["email"], version = "^2.10.1"}
pydantic-settings = "^2.6.1"
redis = {extras = ["hiredis"], version = "^5.2.0"}
celery = "^5.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
aioboto3 = "^13.0.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
circuitbreaker = "^1.4.0"
prometheus-fastapi-instrumentator = "^7.0.0"
opentelemetry-api = "^1.28.1"
opentelemetry-sdk = "^1.28.1"
opentelemetry-instrumentation-fastapi = "^0.50b0"
pymupdf = "^1.24.10"
docling-sdk = "^1.3.6"
tiktoken = "^0.8.0"
openai = "^1.52.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
httpx = "^0.27.2"
factory-boy = "^3.3.1"
faker = "^26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true